[package]
name = "news_scrapper"
version = "0.1.0"
authors = ["Renato <renato145@hotmail.com>"]
edition = "2018"
default-run="news_scrapper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
tokio = { version = "0.2", features = ["full"] }
scraper = "0.12.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
anyhow = "1.0.34"
futures = "0.3.8"
chrono = "0.4.19"
regex = "1.4.2"
lazy_static = "1.4.0"
